# py-scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: README-fav.md  README-tbk.md  README-tempbk.md  fav-introduce.md  fav-setup.md  fav-usage.md  tbk-intro.md
src/: fav.py  tbk.py  tempbk.py
src/scripts/: __init__.py  cf_r2.py  cf_r2_secure.py  config.py  const.py  tbk_config.py  tempbk.py  tempbk_config.py  util.py
